--- a/settings.yaml
+++ b/settings.yaml
@@ -1,6 +1,26 @@
 wiki:
-  tag: "wiki"
-  url: "https://ru.wikipedia.org/w/api.php?format=json&action=query&prop=extracts&exintro=&explaintext=&titles="
+  tag: wiki
+  url: https://ru.wikipedia.org/w/api.php?format=json&action=query&prop=extracts&exintro=&explaintext=&titles=
+
+newton:
+  tag: newton
+  url: https://newton.now.sh/api/v2/
+  operations:
+    - simplify
+    - factor
+    - derive
+    - integrate
+    - zeroes
+    - tangent
+    - area
+    - cos
+    - sin
+    - tan
+    - arccos
+    - arcsin
+    - arctan
+    - abs
+    - log
 
 # map of services; the service will be started if the message starts with one of the prefixes
 services:
@@ -13,5 +33,14 @@ services:
     - "В"
     - "вики "
     - "Вики "
+  newton:
+    - "n "
+    - "N "
+    - "newton "
+    - "Newton "
+    - "н "
+    - "Н"
+    - "ньютон "
+    - "Ньютон "
 
 
