--- a/settings.yaml
+++ b/settings.yaml
@@ -1,6 +1,6 @@
 help_text: |
   1) wiki - find some title in wikipedia
-  using: w [or W, в, В] <some_name>
+  using: w [or W, в, В] <name>
   example: "w go"
 
   2) newton - powerful math calculator
