--- a/settings.yaml
+++ b/settings.yaml
@@ -38,7 +38,8 @@ help_text: |
   4) golang - tips and tricks
   using: go [or Go, го, Го] <tag1> <tag2> ...
   example: go extract prefix
-  command to show all tags: go *
+  command to show all tags: go #
+  command to show all titles: go *
 
 wiki:
   tag: wiki
